# RidgeTrough

./: .gitignore  README.md  Untitled.ipynb  Untitled1.ipynb  demo.ipynb  environment.yml  pyproject.toml  workbook.ipynb
RidgeTrough/: cdf_data.py  lines.py
notebooks/: demo.ipynb  hyper-parameter-search.ipynb
