[tool.poetry]
name = "ridgetrough"
version = "0.1.0"
description = ""
authors = ["Tyler Becker <tylertronics@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
netCDF4 = "^1.6.1"
matplotlib = "^3.6.1"
cftime = "^1.6.2"
Cartopy = "^0.21.0"
scipy = "^1.9.3"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
